# Studies

./: GPG_public.key  README.md  TODO
.github/: FUNDING.yml
Code/: README.md  python3_encoding_list.txt  tgbot_lmstudio_local_deepseek.py  trivium.py
Code/Arduino/: leonardo_autorun_windows.cpp  leonardo_autorun_windows.txt
Code/Assembly/: compile_64.txt  get_shellcode.sh  lin_print_syscall_name.asm  lin_syscall_x86.asm  lin_syscalss.asm  linux_arm_local_shell.asm  references.txt  shell64.asm  tips.txt  unistd_32.h  win_file_downloader.asm  win_open_cmd.asm  win_shell_exe.asm  win_using_dlls.asm
Code/Bash/: 000_honeypot.sh  000_honeypot_config.cfg  1line_c2.sh  7z_pass_protected.sh  [wip]_kain.sh  access_ascii.sh  analyze_onion_service.sh  android_ssl_pinnin.sh  anticat_malware.sh  ascii_to_decimal.sh  at.sh  auto_smtp.sh  aws_dump.sh  bare_metal_enc_chat.sh  bash_functions.sh  bash_to_elf.sh  bash_tricks.sh  benchmaker.sh  bind_shell.sh  bluetooth.sh  brute_force_example.sh  catv.sh  cbleed_b92.sh  check_certs.sh  check_dns_records.sh  check_histlog.sh  check_ssl_certs.sh  check_traffic_to_site.sh  code_caves.sh  colors.sh  compile_python_script.sh  compress_rm_imgs.sh  compression_bomb.sh  concat_files.sh  correct_fedora_wifi.sh  crack-jwt-signatures.sh  create_multidirs.sh  create_project_folder.sh  crt.sh  daily_hunt.sh  (+207 more)
Code/Bots/: depaste.py  (+1 more)
Code/Bots/rust-discord-bot/: Cargo.toml
Code/Bots/rust-discord-bot/src/: commands.rs  config.rs  main.rs
Documents/: Livros.odt  README.md  Relatório de Pentest -Template.odt  dns_miniwordlist.txt  hardening_servers
(+876 files in other folders)
